--- a/login.html
+++ b/login.html
@@ -82,7 +82,7 @@ body {
         <!--------------------------- Left Box ----------------------------->
            <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box" style="background: #ececec;">
                <div class="featured-image mb-3">
-                <img src="./assets/images/pigeon-fotor-bg-remover-2024102024628.png" class="img-fluid logo" style="width: 400px;">
+                <img src="./assets/images/logo.png" class="img-fluid logo" style="width: 400px;">
                </div>
               
              
