--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-  <link rel="stylesheet" href="./assets/css/login.css">
+  <link rel="stylesheet" href="">
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
  <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
@@ -17,6 +17,11 @@ body{
 /*------------ Login container ------------*/
 .box-area{
     width: 930px;
+    backdrop-filter: blur(7px) saturate(200%);
+    -webkit-backdrop-filter: blur(7px) saturate(200%);
+    background-color: rgba(255, 255, 255, 0.42);
+    border-radius: 12px;
+    border: 1px solid rgba(209, 213, 219, 0.3);
 }
 /*------------ Right box ------------*/
 .right-box{
@@ -78,9 +83,9 @@ body {
     <!----------------------- Main Container -------------------------->
     <div class="container d-flex justify-content-center align-items-center vh-100">
         <!----------------------- Login Container -------------------------->
-           <div class="row border rounded-5 p-3 my-4 bg-white shadow box-area">
+           <div class="row border rounded-5 p-3 my-4 box-area">
         <!--------------------------- Left Box ----------------------------->
-           <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box" style="background: #f3f3f3;">
+           <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box">
                <div class="featured-image mb-3">
                 <img src="./assets/images/logo.png" class="img-fluid logo" style="width: 400px;">
                </div>
@@ -92,7 +97,7 @@ body {
            <div class="col-md-6 right-box">
               <div class="row align-items-center">
                     <div class="header-text mb-2">
-                         <h2 class="text-center text-primary mb-1">Sign up now</h2>
+                         <h2 class="text-center text-primary mb-1">SIGN UP</h2>
                          
                     </div>
                     <form action="" method="POST" class="ms-auto me-auto mt-0">
