--- a/user/index.html
+++ b/user/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     
 
@@ -97,9 +98,9 @@
               <div class="carousel-caption">
                 <h1>Another example headline.</h1>
                 <p>Some representative placeholder content for the second slide of the carousel.</p>
-                <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                <p><a class="btn btn-lg btn-primary" data-aos="fade-up" href="#">Learn more</a></p>
               </div>
-            </div>
+            </div> 
           </div>
       <div class="carousel-item" style="background-image: url('../assets/images/rooms.jpg'); background-size: cover; background-position: center;">
         
@@ -146,18 +147,18 @@
               <h1 class="mb-4">Welcome to <span class="text-primary text-uppercase">Pigeon</span></h1>
               <p class="mb-4">"Escape to paradise at our resort, where luxury meets adventure! Our doors are wide open, inviting you to indulge in unforgettable experiences and create cherished memories. Whether you crave relaxation by the pool, book with different events, and enjoying at our Gazebo, we've got it all. Come join us and let the journey to your dream vacation begin!"</p>
               <div class="row g-3 pb-4">
-                  <div class="col-sm-4 wow fadeIn" data-wow-delay="0.1s">
+                  <div class="col-sm-4 ">
                       <div class="border rounded p-1">
-                          <div class="border rounded text-center p-4">
+                          <div class="border rounded text-center p-4" data-aos="fade-right">
                               <i class="bx bx-building-house text-primary mb-2" style="font-size: 2rem;"></i>
                               <h2 class="mb-1">7</h2>
                               <p class="mb-0">Rooms</p>
                           </div>
                       </div>
                   </div>
-                  <div class="col-sm-4 wow fadeIn" data-wow-delay="0.5s">
+                  <div class="col-sm-4 ">
                       <div class="border rounded p-1">
-                          <div class="border rounded text-center p-4">
+                          <div class="border rounded text-center p-4" data-aos="fade-left">
                               <i class="bx bx-home text-primary mb-2" style="font-size: 2rem;"></i>
                               <h2 class="mb-1">10</h2>
                               <p class="mb-0">Cottages</p>
@@ -168,16 +169,16 @@
           </div>
           <div class="col-lg-6">
               <div class="row g-3">
-                  <div class="col-6 text-end">
-                      <img class="img-fluid rounded w-75" src="../assets/images/mansion.jpg" style="margin-top: 25%;">
+                  <div class="col-6 text-end" data-aos="fade-up-right">
+                      <img class="img-fluid rounded w-75"  src="../assets/images/mansion.jpg" style="margin-top: 25%;">
                   </div>
-                  <div class="col-6 text-start">
+                  <div class="col-6 text-start" data-aos="fade-up-left">
                       <img class="img-fluid rounded w-100"src="../assets/images/rooms.jpg">
                   </div>
-                  <div class="col-6 text-end">
+                  <div class="col-6 text-end" data-aos="fade-up-right">
                       <img class="img-fluid rounded w-50"src="../assets/images/signup-bg.jpg">
                   </div>
-                  <div class="col-6 text-start">
+                  <div class="col-6 text-start" data-aos="zoom-in-up">
                       <img class="img-fluid rounded w-75"src="../assets/images/logo.png">
                   </div>
               </div>
@@ -188,9 +189,34 @@
 <!-- About End -->
 
 
+<!-- Location -->
+<div class="container">
+    <div class="text-center">
+        <h6 class="section-title text-center text-primary text-uppercase" >Our Location</h6>
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="map-container" data-aos="zoom-in-up" >
+                    <iframe 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3937.255723769832!2d123.24399527408721!3d9.310594684519417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33ab65ed710fb4c3%3A0x1797c20cfffc8393!2sPigeon%20Resort!5e0!3m2!1sen!2sph!4v1729882279662!5m2!1sen!2sph" 
+                        width="100%" 
+                        height="100%" 
+                        style="border:0;" 
+                        allowfullscreen="" 
+                        loading="lazy" 
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- Location end -->
+
+
 
 </div>
    
-
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+  </script>
 </body>
 </html>
