--- a/signup.html
+++ b/signup.html
@@ -68,7 +68,7 @@ body{
 
 
 body {
-    background-image: url('./assets/images/signup-bg.jpg');
+    background-image: url('./assets/images/signup-bg.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
