--- a/user/index.html
+++ b/user/index.html
@@ -6,6 +6,7 @@
     <title>Pigeon Resort | Landing Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
@@ -190,7 +191,7 @@
 
 <div class="container-xxl py-6">
     
-    <div class="container">
+    <div class="container mb-3 py-6">
         <div class="text-center mb-2">
         <h6 class="section-title text-center text-primary text-uppercase" >Our Location</h6></div>
         <div class="row g-5 align-items-center">
@@ -242,7 +243,267 @@
   </div>
   <!-- location End -->
 
+<!-- rooms -->
+<div class="container mt-5">
+    <div class="text-center mb-2">
+        <h6 class="section-title text-center text-primary text-uppercase" >Rooms</h6>
+        <h1 class="mb-5">Explore Our <span class="text-primary text-uppercase">Rooms</span></h1>
+        </div>
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <!-- Deluxe Room Card -->
+        <div class="col"  data-aos="fade-up">
+            <div class="card h-100">
+                <img src="../assets/images/room101.webp" class="card-img-top" alt="Deluxe Room" style="height: 300px;">
+                <div class="position-absolute top-0 end-0 m-3">
+                    <span class="badge availability-badge">Available</span>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title text-primary">Deluxe Room</h5>
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+                        <span class="price-tag">P 1600<small class="text-muted">/night</small></span>
+                        <span class="text-muted">35m²</span>
+                    </div>
+                    <div class="mb-3">
+                        <div class="row g-2">
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-user-friends me-2"></i>2 Guests
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-bed me-2"></i>King Bed
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-wifi me-2"></i>Free WiFi
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-swimming-pool me-2"></i>Pool View
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary w-100">Book Now</button>
+                </div>
+            </div>
+        </div>
 
+        <!-- Suite Room Card -->
+        <div class="col" data-aos="fade-up">
+            <div class="card h-100">
+                <img src="../assets/images/room102.webp" class="card-img-top" alt="Suite Room" style="height: 300px;">
+                <div class="position-absolute top-0 end-0 m-3">
+                    <span class="badge availability-badge">Available</span>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title text-primary">Suite Room</h5>
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+                        <span class="price-tag">P 1600<small class="text-muted">/night</small></span>
+                        <span class="text-muted">50m²</span>
+                    </div>
+                    <div class="mb-3">
+                        <div class="row g-2">
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-user-friends me-2"></i>4 Guests
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-bed me-2"></i>2 Queen Beds
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-wifi me-2"></i>Free WiFi
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-mountain me-2"></i>Ocean View
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary w-100">Book Now</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Premium Room Card -->
+        <div class="col" data-aos="fade-up">
+            <div class="card h-100 unavailable">
+                <img src="../assets/images/room103.webp" class="card-img-top" alt="Premium Room" style="height: 300px;">
+                <div class="position-absolute top-0 end-0 m-3">
+                    <span class="badge unavailable-badge">Unvailable</span>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title text-primary">Premium Room</h5>
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+                        <span class="price-tag">P 1699<small class="text-muted">/night</small></span>
+                        <span class="text-muted">65m²</span>
+                    </div>
+                    <div class="mb-3">
+                        <div class="row g-2">
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-user-friends me-2"></i>3 Guests
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-bed me-2"></i>King + Single
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-wifi me-2"></i>Free WiFi
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-hot-tub me-2"></i>Jacuzzi
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary w-100">Book Now</button>
+                </div>
+            </div>
+        </div>
+
+         <!-- Deluxe Room Card -->
+         <div class="col" data-aos="fade-up">
+            <div class="card h-100">
+                <img src="../assets/images/room101.webp" class="card-img-top" alt="Deluxe Room" style="height: 300px;">
+                <div class="position-absolute top-0 end-0 m-3">
+                    <span class="badge availability-badge">Available</span>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title text-primary">Deluxe Room</h5>
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+                        <span class="price-tag">P 1600<small class="text-muted">/night</small></span>
+                        <span class="text-muted">35m²</span>
+                    </div>
+                    <div class="mb-3">
+                        <div class="row g-2">
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-user-friends me-2"></i>2 Guests
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-bed me-2"></i>King Bed
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-wifi me-2"></i>Free WiFi
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-swimming-pool me-2"></i>Pool View
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary w-100">Book Now</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Suite Room Card -->
+        <div class="col" data-aos="fade-up">
+            <div class="card h-100">
+                <img src="../assets/images/room102.webp" class="card-img-top" alt="Suite Room" style="height: 300px;">
+                <div class="position-absolute top-0 end-0 m-3">
+                    <span class="badge availability-badge">Available</span>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title text-primary">Suite Room</h5>
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+                        <span class="price-tag">P 1600<small class="text-muted">/night</small></span>
+                        <span class="text-muted">50m²</span>
+                    </div>
+                    <div class="mb-3">
+                        <div class="row g-2">
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-user-friends me-2"></i>4 Guests
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-bed me-2"></i>2 Queen Beds
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-wifi me-2"></i>Free WiFi
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-mountain me-2"></i>Ocean View
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary w-100">Book Now</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Premium Room Card -->
+        <div class="col" data-aos="fade-up">
+            <div class="card h-100 unavailable">
+                <img src="../assets/images/room103.webp" class="card-img-top" alt="Premium Room" style="height: 300px;">
+                <div class="position-absolute top-0 end-0 m-3">
+                    <span class="badge unavailable-badge">Unvailable</span>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title text-primary">Premium Room</h5>
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+                        <span class="price-tag">P 1699<small class="text-muted">/night</small></span>
+                        <span class="text-muted">65m²</span>
+                    </div>
+                    <div class="mb-3">
+                        <div class="row g-2">
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-user-friends me-2"></i>3 Guests
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-bed me-2"></i>King + Single
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-wifi me-2"></i>Free WiFi
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="room-amenity">
+                                    <i class="fas fa-hot-tub me-2"></i>Jacuzzi
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary w-100">Book Now</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- rooms end -->
 
 
 
