--- a/login.html
+++ b/login.html
@@ -68,7 +68,7 @@ body{
 
 
 body {
-    background-image: url('./assets/images/pigeon-bg-transformed.jpeg');
+    background-image: url('./assets/images/pigeon-bg-transformed.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
