--- a/signup.html
+++ b/signup.html
@@ -87,7 +87,7 @@ body {
         <!--------------------------- Left Box ----------------------------->
            <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box">
                <div class="featured-image mb-3">
-                <img src="./assets/images/logo.png" class="img-fluid logo" style="width: 400px;">
+                <img src="./assets/images/logo.webp" class="img-fluid logo" style="width: 400px;">
                </div>
               
                            
