--- a/user/booking.html
+++ b/user/booking.html
@@ -9,10 +9,59 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="../user/css/booking.css">
 </head>
 <body class="bg-light">
+<!-- TOP NAV -->
+<div class="top-nav" id="home">
+    <div class="container">
+        <div class="row justify-content-between">
+            <div class="col-auto">
+                <p> <i class='bx bxs-envelope'></i> pigeonresort@gmail.com</p>
+                <p> <i class='bx bxs-phone-call'></i>0917 726 9260</p>
+            </div>
+            <div class="col-auto social-icons">
+                <a href="https://web.facebook.com/pigeonresort/"><i class='bx bxl-facebook'></i></a>
+                <a href="#"><i class='bx bxl-twitter'></i></a>
+                <a href="#"><i class='bx bxl-instagram'></i></a>
+                <a href="#"><i class='bx bxl-pinterest'></i></a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- BOTTOM NAV -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
+    <div class="container">
+        <a class="navbar-brand" href="#">
+            <img src="../assets/images/logo.webp" alt="Pigeon Resort Logo" class="logo-image" style="width: 100px; height: 55px;">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link d-flex align-items-center" href="booking.html">
+                        <i class='bx bx-calendar me-2' style="font-size: 20px; color: orange;"></i>
+                        <span>Booking</span>
+                    </a>
+                </li>
+                
+
+              
+        </div>
+    </div>
+</nav>
+
+<!-- end of nav -->
+
     <div class="container py-5">
         <div class="row justify-content-center">
             <div class="col-md-8">
