with a reservation and small adjustments

--- a/user/index.html
+++ b/user/index.html
@@ -100,12 +100,17 @@
             <div class="container">
               <div class="carousel-caption">
                 <h1 class="section-title">Pigeon Resort</h1>
-                <p class="mt-2">is an ideal destination for family retreats, gatherings with friends, corporate events, weddings, birthdays, and special celebrations in a tranquil mountain setting.
+                <p class="mt-2 mt-md-4">is an ideal destination for family retreats, gatherings with friends, corporate events, weddings, birthdays, and special celebrations in a tranquil mountain setting.
                 </p>
-                <div class="d-flex justify-content-center gap-2 mb-2 ">
-                    <p><a class="btn btn-lg btn-primary" data-aos="fade-up" href="./reservation.html">Reserve Now</a></p>
-                    <p><a class="btn btn-lg btn-book" data-aos="fade-up" href="./booking.html">Book Now</a></p>
+                <div class="d-flex justify-content-center justify-content-lg-center gap-2 mb-2 mb-md-4">
+                    <p>
+                        <a class="btn btn-lg btn-primary" data-aos="fade-up" aria-label="Reserve Now Button" href="./reservation.html">Reserve Now</a>
+                    </p>
+                    <p>
+                        <a class="btn btn-lg btn-secondary" data-aos="fade-up" aria-label="Book Now Button" href="./booking.html">Book Now</a>
+                    </p>
                 </div>
+                
                 
               </div>
             </div> 
