--- a/staff/staff_reservations.html
+++ b/staff/staff_reservations.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pigeon Resort | Staff Bookings</title>
+    <title>Pigeon Resort | Staff Reservations</title>
     
     <link rel="icon" href="../assets/images/logo.webp" type="image/webp">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/ae360af17e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../staff/css/staff_bookings.css">
+    <link rel="stylesheet" href="../staff/css/staff_reservations.css">
 </head>
 
 <body>
@@ -53,7 +53,7 @@
                         </ul>
                     </li>
                     <li class="sidebar-item">
-                        <a href="#" class="sidebar-link collapsed" data-bs-target="#posts" data-bs-toggle="collapse"
+                        <a href="../staff/staff_reservations.html" class="sidebar-link collapsed" data-bs-target="#posts" data-bs-toggle="collapse"
                             aria-expanded="false"><i class="fa-solid fa-calendar-days pe-2"></i>
                             Reservations
                         </a>
