with a booking form in the staff

--- a/staff/staff_reservations.html
+++ b/staff/staff_reservations.html
@@ -48,24 +48,21 @@
                                 <a href="../staff/staff_bookings.html" class="sidebar-link">New Bookings</a>
                             </li>
                             <li class="sidebar-item">
-                                <a href="#" class="sidebar-link">Page 2</a>
+                                <a href="../staff/add_bookings.html" class="sidebar-link">Add Bookings</a>
                             </li>
                         </ul>
                     </li>
                     <li class="sidebar-item">
-                        <a href="../staff/staff_reservations.html" class="sidebar-link collapsed" data-bs-target="#posts" data-bs-toggle="collapse"
+                        <a href="#" class="sidebar-link collapsed" data-bs-target="#posts" data-bs-toggle="collapse"
                             aria-expanded="false"><i class="fa-solid fa-calendar-days pe-2"></i>
                             Reservations
                         </a>
                         <ul id="posts" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
                             <li class="sidebar-item">
-                                <a href="#" class="sidebar-link">Post 1</a>
+                                <a href="../staff/staff_reservations.html" class="sidebar-link">New Reservations</a>
                             </li>
                             <li class="sidebar-item">
-                                <a href="#" class="sidebar-link">Post 2</a>
-                            </li>
-                            <li class="sidebar-item">
-                                <a href="#" class="sidebar-link">Post 3</a>
+                                <a href="../staff/add_reservations.html" class="sidebar-link">Add Reservations</a>
                             </li>
                         </ul>
                     </li>
@@ -138,19 +135,20 @@
                     <div class="container-fluid p-4">
                         <div class="card shadow">
                             <div class="card-header bg-primary text-white">
-                                <h5 class="card-title mb-0">Current Bookings</h5>
+                                <h5 class="card-title mb-0">Reservations</h5>
                             </div>
                             <div class="card-body">
                                 <div class="table-responsive">
                                     <table class="table table-hover align-middle">
                                         <thead class="table-light">
                                             <tr>
-                                                <th>Booking #</th>
-                                                <th>Room</th>
+                                                <th>Reservation #</th>
+                                                <th>Accomodation</th>
                                                 <th>Guest</th>
                                                 <th>Check In</th>
                                                 <th>Check Out</th>
                                                 <th>Guests</th>
+                                                <th>Additional Services</th>
                                                 <th>Stay Duration</th>
                                                 <th>Payment</th>
                                                 <th>Amount</th>
@@ -160,12 +158,13 @@
                                         </thead>
                                         <tbody>
                                             <tr>
-                                                <td><span class="fw-medium">BK-2024001</span></td>
-                                                <td>101</td>
+                                                <td><span class="fw-medium">RS-2024001</span></td>
+                                                <td>Cottage</td>
                                                 <td>John Doe</td>
                                                 <td>2024-03-15</td>
                                                 <td>2024-03-17</td>
                                                 <td>2 Adults, 1 Kid</td>
+                                                <td>Karaoke</td>
                                                 <td>Overnight</td>
                                                 <td>
                                                     <span class="badge bg-success">Paid</span>
@@ -185,12 +184,13 @@
                                                 </td>
                                             </tr>
                                             <tr>
-                                                <td><span class="fw-medium">BK-2024002</span></td>
-                                                <td>205</td>
+                                                <td><span class="fw-medium">RS-2024002</span></td>
+                                                <td>Gazebo</td>
                                                 <td>Jane Smith</td>
                                                 <td>2024-03-16</td>
                                                 <td>2024-03-20</td>
                                                 <td>2 Adults</td>
+                                                <td>Table and Chair</td>
                                                 <td>Day Use</td>
                                                 <td>
                                                     <span class="badge bg-success">Paid</span>
@@ -210,12 +210,13 @@
                                                 </td>
                                             </tr>
                                             <tr>
-                                                <td><span class="fw-medium">BK-2024003</span></td>
-                                                <td>304</td>
+                                                <td><span class="fw-medium">RS-2024003</span></td>
+                                                <td>Native</td>
                                                 <td>Robert Johnson</td>
                                                 <td>2024-03-18</td>
                                                 <td>2024-03-19</td>
                                                 <td>1 Adult</td>
+                                                <td>Karaoke</td>
                                                 <td>Day Use</td>
                                                 <td>
                                                     <span class="badge bg-success">Paid</span>
