--- a/user/index.html
+++ b/user/index.html
@@ -107,7 +107,7 @@
                         <a class="btn btn-lg btn-primary" data-aos="fade-up" aria-label="Reserve Now Button" href="./reservation.html">Reserve Now</a>
                     </p>
                     <p>
-                        <a class="btn btn-lg btn-secondary" data-aos="fade-up" aria-label="Book Now Button" href="./booking.html">Book Now</a>
+                        <a class="btn btn-lg btn-secondary1" data-aos="fade-up" aria-label="Book Now Button" href="./booking.html">Book Now</a>
                     </p>
                 </div>
                 
