--- a/staff/dashboard.html
+++ b/staff/dashboard.html
@@ -55,7 +55,7 @@
                                 <a href="../staff/staff_bookings.html" class="sidebar-link">New Bookings</a>
                             </li>
                             <li class="sidebar-item">
-                                <a href="#" class="sidebar-link">Page 2</a>
+                                <a href="../staff/add_bookings.html" class="sidebar-link">Add Bookings</a>
                             </li>
                         </ul>
                     </li>
@@ -66,14 +66,12 @@
                         </a>
                         <ul id="posts" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
                             <li class="sidebar-item">
-                                <a href="#" class="sidebar-link">Post 1</a>
+                                <a href="../staff/staff_reservations.html" class="sidebar-link">New Reservations</a>
                             </li>
                             <li class="sidebar-item">
-                                <a href="#" class="sidebar-link">Post 2</a>
+                                <a href="../staff/add_reservations.html" class="sidebar-link">Add Reservations</a>
                             </li>
-                            <li class="sidebar-item">
-                                <a href="#" class="sidebar-link">Post 3</a>
-                            </li>
+                           
                         </ul>
                     </li>
                     <li class="sidebar-item">
