--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -4,73 +4,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Activity Logs - Resort Management System</title>
-    <!-- Bootstrap 5 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- DataTables CSS -->
-    <link href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css" rel="stylesheet">
+    <title>Admin Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
-<body>
-    <div class="container-fluid mt-4">
-        <h2 class="mb-4">System Activity Logs</h2>
-        <div class="card">
-            <div class="card-body">
-                <table id="activityTable" class="table table-striped table-bordered">
-                    <thead>
-                        <tr>
-                            <th>Timestamp</th>
-                            <th>User</th>
-                            <th>Action</th>
-                            <th>Module</th>
-                            <th>Description</th>
-                            <th>IP Address</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!-- Sample data - Replace with dynamic data -->
-                        <tr>
-                            <td>2024-01-20 10:30:15</td>
-                            <td>admin@resort.com</td>
-                            <td>CREATE</td>
-                            <td>Bookings</td>
-                            <td>Created new booking #1234</td>
-                            <td>192.168.1.1</td>
-                        </tr>
-                        <tr>
-                            <td>2024-01-20 10:28:00</td>
-                            <td>staff1@resort.com</td>
-                            <td>UPDATE</td>
-                            <td>Rooms</td>
-                            <td>Updated room status to occupied</td>
-                            <td>192.168.1.2</td>
-                        </tr>
-                    </tbody>
-                </table>
+<body class="bg-light">
+    <div class="container-fluid py-4">
+        <!-- Stats Cards -->
+        <div class="row g-4 mb-4">
+            <div class="col-12 col-sm-6 col-xl-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Total Users</h5>
+                        <h2 class="mt-3 mb-0">1,482</h2>
+                        <p class="text-success"><i class="bi bi-arrow-up"></i> +12% this month</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-xl-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Active Users</h5>
+                        <h2 class="mt-3 mb-0">847</h2>
+                        <p class="text-success"><i class="bi bi-arrow-up"></i> +5% this week</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-xl-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">New Registrations</h5>
+                        <h2 class="mt-3 mb-0">67</h2>
+                        <p class="text-success"><i class="bi bi-arrow-up"></i> +8% this week</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-xl-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Activity Logs</h5>
+                        <h2 class="mt-3 mb-0">2,846</h2>
+                        <p class="text-muted">Last 24 hours</p>
+                    </div>
+                </div>
             </div>
         </div>
+
+        <!-- Charts Row -->
+        <div class="row g-4">
+            <div class="col-12 col-lg-8">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">User Activity Trend</h5>
+                        <canvas id="activityChart"></canvas>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Account Status</h5>
+                        <canvas id="accountsPieChart"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 
-    <!-- Required Scripts -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
-
-    <!-- Initialize DataTable -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        $(document).ready(function () {
-            $('#activityTable').DataTable({
-                order: [[0, 'desc']], // Sort by timestamp descending
-                pageLength: 10,
-                responsive: true,
-                dom: 'Bfrtip',
-                lengthMenu: [[10, 25, 50, -1], [10, 25, 50, "All"]]
-            });
+        // Activity Chart
+        const activityCtx = document.getElementById('activityChart').getContext('2d');
+        new Chart(activityCtx, {
+            type: 'line',
+            data: {
+                labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
+                datasets: [{
+                    label: 'User Activity',
+                    data: [65, 59, 80, 81, 56, 55, 40],
+                    fill: false,
+                    borderColor: 'rgb(75, 192, 192)',
+                    tension: 0.1
+                }]
+            }
+        });
+
+        // Accounts Pie Chart
+        const accountsCtx = document.getElementById('accountsPieChart').getContext('2d');
+        new Chart(accountsCtx, {
+            type: 'pie',
+            data: {
+                labels: ['Active', 'Inactive', 'Suspended'],
+                datasets: [{
+                    data: [70, 20, 10],
+                    backgroundColor: ['#198754', '#ffc107', '#dc3545']
+                }]
+            }
         });
     </script>
 </body>
-
-</html>
 
 </html>
