with revised products card

--- a/user/index.html
+++ b/user/index.html
@@ -111,11 +111,12 @@
                         </p>
                         <div class="d-flex justify-content-center justify-content-lg-center gap-2 mb-2 mb-md-4">
                             <p>
-                                <a class="btn btn-lg btn-primary" data-aos="fade-up" aria-label="Reserve Now Button"
-                                    href="./reservation.html">Reserve Now</a>
+                                <a class="btn btn-lg btn-primary same-size-btn" data-aos="fade-up"
+                                    aria-label="Reserve Now Button" href="./reservation.html">Reserve Now</a>
                             </p>
                             <p>
-                                <a class="btn btn-lg btn-secondary" style="background-color: orange; border: none;"
+                                <a class="btn btn-lg btn-secondary same-size-btn"
+                                    style="background-color: orange; border: none;"
                                     onmouseover="this.style.backgroundColor='darkorange';"
                                     onmouseout="this.style.backgroundColor='orange';" data-aos="fade-up"
                                     aria-label="Book Now Button" href="./booking.html">Book Now</a>
@@ -361,7 +362,7 @@
                                 </div>
                                 <div class="col-6">
                                     <div class="room-amenity">
-                                        <i class="fas fa-mountain me-2"></i>Ocean View
+                                        <i class="fas fa-swimming-pool me-2"></i>Pool View
                                     </div>
                                 </div>
                             </div>
@@ -377,7 +378,7 @@
                     <img src="../assets/images/room103.webp" class="card-img-top" alt="Premium Room"
                         style="height: 300px;">
                     <div class="position-absolute top-0 end-0 m-3">
-                        <span class="badge unavailable-badge">Reserved</span>
+                        <span class="badge unavailable-badge">Unavailable</span>
                     </div>
                     <div class="card-body">
                         <h5 class="card-title text-primary">Premium Room</h5>
@@ -490,7 +491,7 @@
                                 </div>
                                 <div class="col-6">
                                     <div class="room-amenity">
-                                        <i class="fas fa-mountain me-2"></i>Ocean View
+                                        <i class="fas fa-swimming-pool me-2"></i>Pool View
                                     </div>
                                 </div>
                             </div>
@@ -506,7 +507,7 @@
                     <img src="../assets/images/room103.webp" class="card-img-top" alt="Premium Room"
                         style="height: 300px;">
                     <div class="position-absolute top-0 end-0 m-3">
-                        <span class="badge unavailable-badge">Reserved</span>
+                        <span class="badge unavailable-badge">Unavailable</span>
                     </div>
                     <div class="card-body">
                         <h5 class="card-title text-primary">Premium Room</h5>
